--- a/index.html
+++ b/index.html
@@ -1,42 +1,19 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portafolio de Jose Chamorro</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <h1>Portafolio de Jose Chamorro</h1>
-    <p>Ciencia de Datos en Salud · Visualización · Análisis GRD</p>
-    <div class="social-buttons">
-      <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a>
-      <a href="https://github.com/joch89" target="_blank">GitHub</a>
-    </div>
-  </header>
+<section>
+  <h2>Mis Proyectos</h2>
 
-  <main>
-    <section>
-      <h2>📊 Proyecto 1: Visualización Sankey - Recorrido del paciente</h2>
-      <p>
-        Este diagrama Sankey visualiza el <strong>recorrido del paciente</strong> al que se le realiza una colecistectomía con WCC. Los datos fueron obtenidos de los <em>Datos Abiertos FONASA GRD 2023</em> para un hospital específico.
-      </p>
+  <article>
+    <h3>📊 Recorrido Paciente - Sankey</h3>
+    <p>Visualización Sankey del flujo de pacientes con colecistectomía y WCC.</p>
+    <a href="https://github.com/joch89/proyecto-sankey-colecistectomia" target="_blank">Repositorio</a> |
+    <a href="https://joch89.github.io/Visualizaciones/sankey_cole_wcc.html" target="_blank">Demo</a>
+  </article>
 
-      <div class="iframe-container">
-        <iframe src="https://joch89.github.io/Visualizaciones/sankey_cole_wcc.html" width="100%" height="600" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </section>
-  </main>
+  <article>
+    <h3>📈 Predicción de Estancia Hospitalaria</h3>
+    <p>Modelo de Machine Learning para clasificar duración de estancia.</p>
+    <a href="https://github.com/joch89/analisis-prediccion-estancia" target="_blank">Repositorio</a>
+  </article>
 
-  <footer>
-    <p>&copy; 2025 Jose Chamorro · Contacto: joch89@gmail.com</p>
-    <div class="social-footer">
-      <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a> |
-      <a href="https://github.com/joch89" target="_blank">GitHub</a>
-    </div>
-  </footer>
+  <!-- Más proyectos aquí -->
+</section>
 
-  <script src="script.js"></script>
-</body>
-</html>
