--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
-<section>
-  <h2>Mis Proyectos</h2>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portafolio de Jose Chamorro</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Portafolio de Jose Chamorro</h1>
+    <p>Ciencia de Datos en Salud · Visualización · Análisis GRD</p>
+    <div class="social-buttons">
+      <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a>
+      <a href="https://github.com/joch89" target="_blank">GitHub</a>
+    </div>
+  </header>
 
-  <article>
-    <h3>📊 Recorrido Paciente - Sankey</h3>
-    <p>Visualización Sankey del flujo de pacientes con colecistectomía y WCC.</p>
-    <a href="https://github.com/joch89/Visualizaciones" target="_blank">Repositorio</a> |
-    <a href="https://joch89.github.io/Visualizaciones/sankey_cole_wcc.html" target="_blank">Demo</a>
-  </article>
+  <main>
+    <section class="projects">
+      <h2>🧠 Mis Proyectos</h2>
 
-  <article>
-    <h3>📈 Predicción de Estancia Hospitalaria</h3>
-    <p>Modelo de Machine Learning para clasificar duración de estancia.</p>
-    <a href="https://github.com/joch89/analisis-prediccion-estancia" target="_blank">Repositorio</a>
-  </article>
+      <div class="project-card">
+        <h3>📊 Sankey: Recorrido del Paciente</h3>
+        <p>Visualiza el flujo del paciente con colecistectomía y WCC usando datos abiertos FONASA GRD 2023.</p>
+        <div class="buttons">
+          <a href="https://github.com/joch89/Visualizaciones" target="_blank">Repositorio</a>
+          <a href="https://joch89.github.io/Visualizaciones/sankey_cole_wcc.html" target="_blank">Ver Demo</a>
+        </div>
+      </div>
 
-  <!-- Más proyectos aquí -->
-</section>
+      <div class="project-card">
+        <h3>📈 Predicción de Estancia Hospitalaria</h3>
+        <p>Clasificación de duración de estadía con modelos de machine learning y GRD hospitalarios.</p>
+        <div class="buttons">
+          <a href="https://github.com/joch89/analisis-prediccion-estancia" target="_blank">Repositorio</a>
+        </div>
+      </div>
+
+      <!-- Puedes seguir agregando más tarjetas de proyecto aquí -->
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jose Chamorro · Contacto: joch89@gmail.com</p>
+    <div class="social-footer">
+      <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/joch89" target="_blank">GitHub</a>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
 
