--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <h3>📊 Sankey: Recorrido del Paciente</h3>
         <p>Visualiza el flujo del paciente con colecistectomía y WCC usando datos abiertos FONASA GRD 2023.</p>
         <div class="buttons">
-          <a href="https://github.com/joch89/Visualizaciones" target="_blank">Repositorio</a>
-          <a href="https://joch89.github.io/Visualizaciones/sankey_cole_wcc.html" target="_blank">Ver Demo</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Ver Demo</a>
         </div>
       </div>
 
@@ -42,7 +42,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Jose Chamorro · Contacto: joch89@gmail.com</p>
+    <p>&copy; 2025 Jose Chamorro · Contacto: jm.chamorro.g@gmail.com</p>
     <div class="social-footer">
       <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a> |
       <a href="https://github.com/joch89" target="_blank">GitHub</a>
