--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
       <div class="project-card">
         <h3>📊 Sankey: Recorrido del Paciente</h3>
-        <p>Visualiza el flujo del paciente con colecistectomía y WCC usando datos abiertos FONASA GRD 2023.</p>
+        <p>Visualiza el flujo del paciente con colecistectomía laparoscópica sin y con complicaciones usando datos abiertos FONASA GRD 2023.</p>
         <div class="buttons">
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Ver Demo</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Ver Demo</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wmcc.html" target="_blank">Ver Demo</a>
         </div>
       </div>
 
