--- a/index.html
+++ b/index.html
@@ -18,19 +18,28 @@
 
   <main>
     <section class="projects">
-      <h2>🧠 Mis Proyectos</h2>
+      <h2> Mis Proyectos</h2>
 
       <div class="project-card">
         <h3>📊 Sankey: Recorrido del Paciente</h3>
         <p>Visualiza el flujo del paciente con colecistectomía laparoscópica sin y con complicaciones usando datos abiertos FONASA GRD 2023.</p>
         <div class="buttons">
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Ver Demo</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Ver Demo</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wmcc.html" target="_blank">Ver Demo</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wmcc.html" target="_blank">Gráfico cole_lap_wcc</a>
         </div>
       </div>
 
+      <div class="project-card">
+        <h3>📊 EDA en Grupos Relacionados a Diagnóstitocs</h3>
+        <p> Análisis Exploratorio de Datos (EDA) sobre un conjunto de datos de egresos hospitalarios (GRD) del año 2023.</p>
+        <div class="buttons">
+          <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA.git">Repositorio</a>
+        </div>
+      </div>
+
+      
     </section>
   </main>
 
