--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <footer>
     <p>&copy; 2025 Jose Chamorro · Contacto: jm.chamorro.g@gmail.com</p>
     <div class="social-footer">
-      <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a> |
+      <a href="https://www.linkedin.com/in/jos%C3%A9-chamorro/" target="_blank">LinkedIn</a> |
       <a href="https://github.com/joch89" target="_blank">GitHub</a>
     </div>
   </footer>
