--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
         </div>
       </div>
 
+      <div class="project-card">
+        <h3>📊 Top 20 Diagnosticos Principales por cantidad de egresos</h3>
+        <p> Agrupación por Diagnóstico1, Diagnóstico2, Procedimiento1 y Procedimiento2 en las bases de datos de FONASA entre los años 2019-2020 </p>
+        <div class="buttons">
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla año 2019</a>
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla año 2020</a>
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla año 2021</a>
+        </div>
+      </div>
       
     </section>
   </main>
