--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Portafolio de Jose Chamorro</h1>
-    <p>Ciencia de Datos en Salud · Visualización · Análisis GRD</p>
+    <p>Ciencia de Datos en Salud · Visualización · Análisis GRD · Biomecánica · Computer Vision</p>
     <div class="social-buttons">
       <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a>
       <a href="https://github.com/joch89" target="_blank">GitHub</a>
@@ -48,6 +48,19 @@
           <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla año 2020</a>
           <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla año 2021</a>
         </div>
+
+      <div class="project-card">
+        <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
+        <p><p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p></p>
+        <div class="buttons">
+          <a href="https://github.com/joch89/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla año 2019</a>
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla año 2020</a>
+          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla año 2021</a>
+        </div>
+
+
+        
     </div>
       
     </section>
