--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla año 2020</a>
           <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla año 2021</a>
         </div>
-
+      </div>
+      
       <div class="project-card">
         <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
         <p><p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p></p>
