--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
         <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
         <p><p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p></p>
         <div class="buttons">
-          <a href="https://github.com/joch89/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
-          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla año 2019</a>
-          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla año 2020</a>
-          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla año 2021</a>
+          <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Repositorio</a>
+          <a href="https://joch89.github.io/Analisis-Patada-de-Costado/costadouno.mp4" target="_blank">patada sin analizar</a>
+          <a href="https://joch89.github.io/Analisis-Patada-de-Costado/output_video.mp4" target="_blank">patada con landmarks</a>
         </div>
 
 
