--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wmcc.html" target="_blank">Gráfico cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_1.html" target="_blank">Grafo_1 2D cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_2.html" target="_blank">Grafo_2 2D cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_3.html" target="_blank">Grafo_3 2D cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo_4 3D cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_5.html" target="_blank">Grafo_5 3D cole_lap_wcc</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_6.html" target="_blank">Grafo_6 3D cole_lap_wcc</a>
+
+
+          
         </div>
       </div>
 
@@ -74,5 +83,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
