--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         </div>
         <div class="about-text">
           <h2>Sobre mí</h2>
-          <p>Hola, soy José Chamorro, apasionado por la **Ciencia de Datos aplicada a la Salud**. Me especializo en visualización de datos, análisis de bases de datos GRD, biomecánica y Computer Vision.  
-             Me encanta transformar datos complejos en historias visuales que faciliten la toma de decisiones en el ámbito sanitario.  
-             Fuera del código, disfruto el deporte, la lectura y explorar nuevas técnicas de análisis.</p>
+          <p><strong>Nombre:</strong> José Chamorro<br>
+<strong>Presentación personal:</strong>  
+Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
+He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
+Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.  
+Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.  
+Mi objetivo profesional es seguir creciendo en el ámbito de la salud deportiva, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar el rendimiento y la seguridad de los deportistas.</p>
         </div>
       </div>
     </section>
@@ -44,13 +48,8 @@
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc 1</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wmcc.html" target="_blank">Gráfico cole_lap_wcc 2</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_1.html" target="_blank">Grafo 1 2D</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_2.html" target="_blank">Grafo 2 2D</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_3.html" target="_blank">Grafo 3 2D</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo 4 3D</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_5.html" target="_blank">Grafo 5 3D</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_6.html" target="_blank">Grafo 6 3D</a>
+
         </div>
       </div>
 
@@ -96,5 +95,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
