--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@ Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experien
 He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
 Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.  
 Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.  
-Mi objetivo profesional es seguir creciendo en el ámbito de la salud deportiva, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar el rendimiento y la seguridad de los deportistas.</p>
-        </div>
+Mi objetivo profesional es seguir creciendo en el ámbito de la salud deportiva, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar el rendimiento y la seguridad de los deportistas.</div>
       </div>
     </section>
 
@@ -95,6 +94,7 @@ Mi objetivo profesional es seguir creciendo en el ámbito de la salud deportiva,
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
