--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
         <div class="about-text">
           <h2>Sobre mí</h2>
           <p><strong>Nombre:</strong> José Chamorro<br>
+            
 <strong>Presentación personal:</strong>  
 Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
 He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
 Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.  
+
 Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.  
-Mi objetivo profesional es seguir creciendo en el ámbito de la salud deportiva, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar el rendimiento y la seguridad de los deportistas.</div>
+            
+Mi objetivo profesional es seguir creciendo en el área de Health Data Science, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y salud de las personas, con especial interes en GRD y Computer Vision.</div>
       </div>
     </section>
 
@@ -94,6 +97,7 @@ Mi objetivo profesional es seguir creciendo en el ámbito de la salud deportiva,
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
