--- a/index.html
+++ b/index.html
@@ -25,20 +25,16 @@
           <img src="https://avatars.githubusercontent.com/u/110002047?s=400&u=dd9de1e9936551ba6dedf1eb9ff7fa5e82786de4&v=4" alt="Foto de José Chamorro">
         </div>
         <div class="about-text">
-          <h2>Sobre mí</h2>
-          <p><strong>Nombre:</strong> José Chamorro</p>
-          <p><strong>Presentación personal:</strong><br>
-            Soy <strong>kinesiólogo y quiropráctico con enfoque deportivo</strong>, con interés y experiencia en proyectos personales de <strong>Ciencia de Datos</strong>.  
-            He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
-            Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.
-          </p>
-          <p>
-            Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.
-          </p>
-          <p>
-            Mi objetivo profesional es seguir creciendo en el área de <strong>Health Data Science</strong>, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y la salud de las personas, con especial interés en <strong>GRD</strong> y <strong>Computer Vision</strong>.
-          </p>
-        </div>
+  <h2>Sobre mí</h2>
+  <p><strong>Nombre:</strong> José Chamorro</p>
+  <p><strong>Presentación personal:</strong>  
+  Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
+  He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
+  Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.</p>
+  <p>Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.</p>
+  <p>Mi objetivo profesional es seguir creciendo en el área de Health Data Science, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y salud de las personas, con especial interés en GRD y Computer Vision.</p>
+</div>
+
       </div>
     </section>
 
@@ -99,3 +95,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
