--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
         <div class="about-photo">
           <img src="https://avatars.githubusercontent.com/u/110002047?s=400&u=dd9de1e9936551ba6dedf1eb9ff7fa5e82786de4&v=4" alt="Foto de José Chamorro">
         </div>
-        <div class="about-text">
-  <h2>Sobre mí</h2>
-  <p><strong>Nombre:</strong> José Chamorro</p>
-  <p><strong>Presentación personal:</strong>  
-  Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
-  He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
-  Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.</p>
-  <p>Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.</p>
-  <p>Mi objetivo profesional es seguir creciendo en el área de Health Data Science, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y salud de las personas, con especial interés en GRD y Computer Vision.</p>
-</div>
-
+        <div class="about-text" style="text-align: justify;">
+          <h2>Sobre mí</h2>
+          <p><strong>Nombre:</strong> José Chamorro</p>
+          <p><strong>Presentación personal:</strong>  
+          Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
+          He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
+          Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.</p>
+          <p>Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.</p>
+          <p>Mi objetivo profesional es seguir creciendo en el área de Health Data Science, incorporando análisis de datos y metodologías innovadoras que contribuyan a mejorar la toma de decisiones y salud de las personas, con especial interés en GRD y Computer Vision.</p>
+        </div>
       </div>
     </section>
 
@@ -48,7 +47,7 @@
         <div class="buttons">
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc 1</a>
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
           <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo 4 3D</a>
         </div>
       </div>
@@ -81,6 +80,7 @@
           <a href="https://joch89.github.io/Analisis-Patada-de-Costado/output_video.mp4" target="_blank">Patada con landmarks</a>
         </div>
       </div>
+
     </section>
   </main>
 
@@ -95,4 +95,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
