--- a/index.html
+++ b/index.html
@@ -37,51 +37,53 @@
       </div>
     </section>
 
-    <!-- Sección de Proyectos -->
-    <section class="projects">
-      <h2>Mis Proyectos</h2>
+   <!-- Sección de Proyectos -->
+<section class="projects">
+  <div class="projects-container">
+    <h2>Mis Proyectos</h2>
 
-      <div class="project-card">
-        <h3>📊 Sankey: Gráficos sobre el recorrido del Paciente</h3>
-        <p>Visualiza el flujo del paciente con colecistectomía laparoscópica con y sin complicaciones usando datos abiertos FONASA GRD 2023.</p>
-        <div class="buttons">
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
-          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo 4 3D</a>
-        </div>
+    <div class="project-card">
+      <h3>📊 Sankey: Gráficos sobre el recorrido del Paciente</h3>
+      <p>Visualiza el flujo del paciente con colecistectomía laparoscópica con y sin complicaciones usando datos abiertos FONASA GRD 2023.</p>
+      <div class="buttons">
+        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente" target="_blank">Repositorio</a>
+        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole.html" target="_blank">Gráfico cole_lap</a>
+        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/sankey_df_cole_wcc.html" target="_blank">Gráfico cole_lap_wcc</a>
+        <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/GRD_de_Cole_Lap_con_Comorbilidades_figure_4.html" target="_blank">Grafo 4 3D</a>
       </div>
+    </div>
 
-      <div class="project-card">
-        <h3>📊 EDA en Grupos Relacionados a Diagnósticos</h3>
-        <p>Análisis Exploratorio de Datos (EDA) sobre un conjunto de datos de egresos hospitalarios (GRD) del año 2023.</p>
-        <div class="buttons">
-          <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA.git" target="_blank">Repositorio</a>
-        </div>
+    <div class="project-card">
+      <h3>📊 EDA en Grupos Relacionados a Diagnósticos</h3>
+      <p>Análisis Exploratorio de Datos (EDA) sobre un conjunto de datos de egresos hospitalarios (GRD) del año 2023.</p>
+      <div class="buttons">
+        <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA.git" target="_blank">Repositorio</a>
       </div>
+    </div>
 
-      <div class="project-card">
-        <h3>📊 Top 20 Diagnósticos Principales por cantidad de egresos</h3>
-        <p>Agrupación por Diagnóstico1, Diagnóstico2, Procedimiento1 y Procedimiento2 en las bases de datos de FONASA entre los años 2019-2020.</p>
-        <div class="buttons">
-          <a href="https://github.com/joch89/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
-          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla 2019</a>
-          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla 2020</a>
-          <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla 2021</a>
-        </div>
+    <div class="project-card">
+      <h3>📊 Top 20 Diagnósticos Principales por cantidad de egresos</h3>
+      <p>Agrupación por Diagnóstico1, Diagnóstico2, Procedimiento1 y Procedimiento2 en las bases de datos de FONASA entre los años 2019-2020.</p>
+      <div class="buttons">
+        <a href="https://github.com/joch89/Grupos-Relacionados-Diagnostico-1" target="_blank">Repositorio</a>
+        <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2019.jpg" target="_blank">Tabla 2019</a>
+        <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2020.jpg" target="_blank">Tabla 2020</a>
+        <a href="https://joch89.github.io/Grupos-Relacionados-Diagnostico-1/top_20_2021.jpg" target="_blank">Tabla 2021</a>
       </div>
+    </div>
 
-      <div class="project-card">
-        <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
-        <p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p>
-        <div class="buttons">
-          <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Repositorio</a>
-          <a href="https://joch89.github.io/Analisis-Patada-de-Costado/costadouno.mp4" target="_blank">Patada sin analizar</a>
-          <a href="https://joch89.github.io/Analisis-Patada-de-Costado/output_video.mp4" target="_blank">Patada con landmarks</a>
-        </div>
+    <div class="project-card">
+      <h3>📊 Análisis de landmarks en una patada de costado de taekwondo</h3>
+      <p>Análisis cinemático automatizado de una patada de costado en taekwondo utilizando MediaPipe y Python. Se identifican y visualizan los puntos clave del cuerpo (landmarks) en cada fotograma del video, permitiendo evaluar la técnica, altura y alineación del movimiento.</p>
+      <div class="buttons">
+        <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Repositorio</a>
+        <a href="https://joch89.github.io/Analisis-Patada-de-Costado/costadouno.mp4" target="_blank">Patada sin analizar</a>
+        <a href="https://joch89.github.io/Analisis-Patada-de-Costado/output_video.mp4" target="_blank">Patada con landmarks</a>
       </div>
+    </div>
 
-    </section>
+  </div>
+</section>
   </main>
 
   <footer>
@@ -95,3 +97,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
