--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>Sobre mí</h2>
           <p><strong>Nombre:</strong> José Chamorro</p>
           <p><strong>Presentación personal:</strong>  
-          Soy kinesiólogo y quiropráctico con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
+          Soy kinesiólogo y Quiropráctico con 10 años de experiencia en Rehabilitación con enfoque deportivo, con interés y experiencia en proyectos personales de Ciencia de Datos.  
           He desarrollado análisis propios sobre <strong>Grupos Relacionados por Diagnóstico (GRD)</strong>, explorando cómo la información puede apoyar la toma de decisiones clínicas y deportivas, con miras a futuras aplicaciones de <strong>Machine Learning</strong>.  
           Me especializo en biomecánica y optimización del movimiento en deportistas, y me apasiona integrar salud, tecnología y datos en mis proyectos.</p>
           <p>Practico y disfruto del <strong>taekwondo</strong>, disciplina que refleja mi compromiso con la constancia y el desarrollo personal.</p>
@@ -97,4 +97,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
