--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-        <section class="about-me">
+        <section class="about-me" style="padding-bottom: 20px;">
       <div class="about-container">
         <div class="about-photo">
           <img src="https://avatars.githubusercontent.com/u/110002047?s=400&u=dd9de1e9936551ba6dedf1eb9ff7fa5e82786de4&v=4" alt="Foto de José Chamorro">
@@ -36,7 +36,7 @@
       </div>
     </section>
 
-        <section class="projects-ml">
+        <section class="projects-ml" style="padding-top: 20px; padding-bottom: 20px;">
       <div class="projects-container">
         <h2>Proyectos de Machine Learning</h2>
 
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-        <section class="projects">
+        <section class="projects" style="padding-top: 20px;">
       <div class="projects-container">
         <h2>Otros Proyectos de Análisis y Visualización</h2>
 
